--- a/plantuml.cfg
+++ b/plantuml.cfg
@@ -1,5 +1,6 @@
 <application>
   <component name="PlantUmlSettings">
-    <option name="renderDelay" value="5000" />
+    <option name="cacheSize" value="100" />
+    <option name="renderDelay" value="1000" />
   </component>
 </application>
